# Algoritma

./: .gitignore  tes.txt
metnum/: Newton_rapshon.py  Newton_rapshon_derivativ.py  Newton_rapshon_secan.py  basic_operator.py  cramers_rule.py  determinant.py  determinant_cofactor.py  differentiation.py  integrate.py  inverse_matrix.py  obe.py  regresi.py  regression.py  root_finder.py  secant.py  spl_solver.py  tempCodeRunnerFile.py  turunan.py
strukdat/: sorting.py
strukdat/incpp/: CMakeLists.txt  strukdat.hpp
strukdat/incpp/src/: strukdat.cpp
